updated the documentation

--- a/project documentation/documentation.tex
+++ b/project documentation/documentation.tex
@@ -43,7 +43,9 @@
 		\item nscore, calculates the neighbour score of a given point.
 	\end{itemize}
 	
-	this approach was a significant improvement over the previous one as it resulted in an average of about 44 moves every 1000 games
+	this approach was a significant improvement over the previous one as it resulted in an average of about 44 moves every 1000 games.
+	
+	I have also made a file \textit{gamemaster.py} which imports the code of the original file, \textit{battleship.py} and uses it to actually play the game.
    
    \section{future plans}
    we aim to use the pygame library on this to make the game graphical instead of console based.
